--- a/docs/3.0rc/deploy/control-runs/work-pools.mdx
+++ b/docs/3.0rc/deploy/control-runs/work-pools.mdx
@@ -1,20 +1,13 @@
 ---
-title: Work pools and  workers
-description: Prefect work pools route deployment flow runs to workers. Prefect workers poll work pools for new runs to execute.
+title: Work pools
+description: Prefect work pools route deployment flow runs to workers.
 ---
-
-Work pools and workers bridge the Prefect _orchestration environment_ with your _execution environment_. 
-When a [deployment](/3.0rc/deploy/serve-flows/) creates a flow run, it is submitted to a specific work pool for scheduling. 
-A worker running in the execution environment polls its respective work pool for new runs to execute; or the work pool  
-submits flow runs to serverless infrastructure directly, depending on your configuration.
-
-## Work pool overview
 
 Work pools organize work for execution. Work pools have types corresponding to the infrastructure to execute the flow code, 
 as well as the delivery method of work to that environment. Pull work pools require workers to poll the work 
 pool for flow runs to execute. [Push work pools](/3.0rc/deploy/dynamic-infra/push-runs-serverless) submit runs directly to your 
 serverless infrastructure providers such as Google Cloud Run, Azure Container Instances, and AWS ECS without the need for an agent or worker. 
-[Managed work pools](/3.0rc/deploy/work-pools/managed-execution) are administered by Prefect and handle the submission and execution of code on your behalf.
+[Managed work pools](/3.0rc/deploy/control-runs/managed-execution) are administered by Prefect and handle the submission and execution of code on your behalf.
 
 <Tip>
 **Work pools are like pub/sub topics**
@@ -508,161 +501,6 @@ in waterfall fashion.
     Unpausing a work queue gives the work queue a `NOT_READY` status unless a worker has polled it in the last 60 seconds.
 </Tip>
 
-## Worker overview
-
-Workers are lightweight polling services that retrieve scheduled runs from a work pool and execute them.
-
-Workers each have a type corresponding to the execution environment to submit flow runs to. Workers can only poll 
-work pools that match their type. As a result, when deployments are assigned to a work pool, you know in which execution environment 
-scheduled flow runs for that deployment will run.
-
-### Worker types
-
-Below is a list of available worker types. Most worker types require installation of an additional package.
-
-| Worker Type | Description | Required Package |
-| --- | --- | --- |
-| [`process`](https://prefect-python-sdk-docs.netlify.app/prefect/workers/process/) | Executes flow runs in subprocesses | |
-| [`kubernetes`](https://prefecthq.github.io/prefect-kubernetes/worker/) | Executes flow runs as Kubernetes jobs | `prefect-kubernetes` |
-| [`docker`](https://prefecthq.github.io/prefect-docker/worker/) | Executes flow runs within Docker containers | `prefect-docker` |
-| [`ecs`](https://prefecthq.github.io/prefect-aws/ecs_worker/) | Executes flow runs as ECS tasks | `prefect-aws` |
-| [`cloud-run`](https://prefecthq.github.io/prefect-gcp/cloud_run_worker/) | Executes flow runs as Google Cloud Run jobs | `prefect-gcp` |
-| [`vertex-ai`](https://prefecthq.github.io/prefect-gcp/vertex_worker/) | Executes flow runs as Google Cloud Vertex AI jobs | `prefect-gcp` |
-| [`azure-container-instance`](https://prefecthq.github.io/prefect-azure/container_instance_worker/) | Execute flow runs in ACI containers | `prefect-azure` |
-
-If you don’t see a worker type that meets your needs, consider 
-[developing a new worker type](/contribute/develop-a-new-worker-type/).
-
-### Worker options
-
-Workers poll for work from one or more queues within a work pool. If the worker references a work queue that doesn't exist, 
-it is created automatically. The worker CLI infers the worker type from the work pool. Alternatively, you can  
-specify the worker type explicitly. If you supply the worker type to the worker CLI, a work pool is created automatically 
-if it doesn't exist (using default job settings).
-
-Configuration parameters you can specify when starting a worker include:
-
-| Option                                            | Description                                                                                                                                 |
-| ------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------- |
-| `--name`, `-n`                                    | The name to give to the started worker. If not provided, a unique name will be generated.                                                   |
-| `--pool`, `-p`                                    | The work pool the started worker should poll.                                                                                               |
-| `--work-queue`, `-q`                              | One or more work queue names for the worker to pull from. If not provided, the worker pulls from all work queues in the work pool.      |
-| `--type`, `-t`                                    | The type of worker to start. If not provided, the worker type is inferred from the work pool.                                          |
-| <span class="no-wrap">`--prefetch-seconds`</span> | The amount of time before a flow run's scheduled start time to begin submission. Default is the value of `PREFECT_WORKER_PREFETCH_SECONDS`. |
-| `--run-once`                                      | Only run worker polling once. By default, the worker runs forever.                                                                          |
-| `--limit`, `-l`                                   | The maximum number of flow runs to start simultaneously.                                                                                    |
-| `--with-healthcheck`                                   | Start a healthcheck server for the worker.                                                                                    |
-| `--install-policy`                                   | Install policy to use workers from Prefect integration packages.                                                                                    |
-
-You must start a worker within an environment to access or create the required infrastructure to execute flow runs. 
-The worker will deploy flow runs to the infrastructure corresponding to the worker type. For example, if you start a worker with 
-type `kubernetes`, the worker deploys flow runs to a Kubernetes cluster.
-
-Prefect must be installed in any environment (for example, virtual environment, Docker container) where you intend to run the worker or 
-execute a flow run.
-
-<Tip>
-**`PREFECT_API_URL` and `PREFECT_API_KEY`settings for workers**
-
-    `PREFECT_API_URL` must be set for the environment where your worker is running. You must also have a user or service account 
-    with the `Worker` role, which you can configure by setting the `PREFECT_API_KEY`.
-</Tip>
-
-### Worker status
-
-Workers have two statuses: `ONLINE` and `OFFLINE`. A worker is online if it sends regular heartbeat messages to the Prefect API. 
-If a worker misses three heartbeats, it is considered offline. By default, a worker is considered offline a maximum of 90 seconds 
-after it stopped sending heartbeats, but you can configure the threshold with the `PREFECT_WORKER_HEARTBEAT_SECONDS` setting.
-
-### Start a worker
-
-Use the `prefect worker start` CLI command to start a worker. You must pass at least the work pool name. 
-If the work pool does not exist, it will be created if the `--type` flag is used.
-<div class="terminal">
-```bash
-prefect worker start -p [work pool name]
-```
-</div>
-
-For example:
-<div class="terminal">
-```bash
-prefect worker start -p "my-pool"
-```
-</div>
-
-Results in output like this:
-
-<div class="terminal">
-```bash
-Discovered worker type 'process' for work pool 'my-pool'.
-Worker 'ProcessWorker 65716280-96f8-420b-9300-7e94417f2673' started!
-```
-</div>
-
-In this case, Prefect automatically discovered the worker type from the work pool.
-To create a work pool and start a worker in one command, use the `--type` flag:
-
-<div class="terminal">
-```bash
-prefect worker start -p "my-pool" --type "process"
-```
-</div>
-
-<div class="terminal">
-```bash
-Worker 'ProcessWorker d24f3768-62a9-4141-9480-a056b9539a25' started!
-06:57:53.289 | INFO    | prefect.worker.process.processworker d24f3768-62a9-4141-9480-a056b9539a25 - Worker pool 'my-pool' created.
-```
-</div>
-
-In addition, workers can limit the number of flow runs to start simultaneously with the `--limit` flag.
-For example, to limit a worker to five concurrent flow runs:
-
-<div class="terminal">
-```bash
-prefect worker start --pool "my-pool" --limit 5
-```
-</div>
-
-### Configure prefetch
-
-By default, the worker submits flow runs a short time (10 seconds) before they are scheduled to run. 
-This allows time for the infrastructure to be created so the flow run can start on time.
-
-In some cases, infrastructure takes longer than 10 seconds to start the flow run. You can increase the prefetch with the 
-`--prefetch-seconds` option or the `PREFECT_WORKER_PREFETCH_SECONDS` setting.
-
-If this value is _more_ than the amount of time it takes for the infrastructure to start, the flow run will _wait_ until its 
-scheduled start time.
-
-### Polling for work
-
-Workers poll for work every 15 seconds by default. You can configure this interval in your [profile settings](/3.0rc/manage/configure-client/) 
-with the
-`PREFECT_WORKER_QUERY_SECONDS` setting.
-
-### Install policy
-
-The Prefect CLI can install the required package for Prefect-maintained worker types automatically. Configure this behavior 
-with the `--install-policy` option. The following are valid install policies:
-
-| Install Policy | Description |
-| --- | --- |
-| `always` | Always install the required package. Updates the required package to the most recent version if already installed. |
-| `if-not-present` | Install the required package if it is not already installed. |
-| `never` | Never install the required package. |
-| `prompt` | Prompt the user to choose whether to install the required package. This is the default install policy. 
-If `prefect worker start` is run non-interactively, the `prompt` install policy behaves the same as `never`. |
-
-### Additional resources
-
-See how to [daemonize a Prefect worker](/3.0rc/deploy/dynamic-infra/push-runs-remote/).
-
-See more information on [overriding a work pool's job variables](/3.0rc/deploy/dynamic-infra/customize).
-
----------
-
 ## Benefits of work pools
 
 Work pools are a bridge between the Prefect orchestration layer and infrastructure for flow runs that can be dynamically provisioned.
@@ -692,9 +530,9 @@ Other advantages of work pools:
 
 - Configure default infrastructure configurations on your work pools that all jobs inherit and can override.
 - Allow platform teams to use work pools to expose opinionated (and enforced) interfaces to the infrastructure that they oversee.
-- Allow work pools to prioritize (or limit) flow runs through the use of [work queues](/3.0rc/deploy/work-pools/control-runs/#work-queues).
+- Allow work pools to prioritize (or limit) flow runs through the use of [work queues](/3.0rc/deploy/control-runs/work-pools/#work-queues).
 
-Prefect provides several [types of work pools](/3.0rc/deploy/work-pools/control-runs/#work-pool-types).
+Prefect provides several [types of work pools](/3.0rc/deploy/control-runs/work-pools/#work-pool-types).
 Prefect Cloud provides a Prefect Managed work pool option that is the simplest way to run workflows remotely.
 A cloud-provider account, such as AWS, is not required with a Prefect Managed work pool.
 
@@ -836,7 +674,7 @@ prefect deployment run 'get_repo_info/my-deployment'
 ```
 
 Prefect Managed work pools are a great way to get started with Prefect.  
-See the [Managed Execution guide](/3.0rc/deploy/work-pools/managed-execution) for more details.
+See the [Managed Execution guide](/3.0rc/deploy/control-runs/managed-execution) for more details.
 
 For more control over the infrastructure that your flows run on, we recommend Prefect Cloud's push work pools.
 
