--- a/docs/3.0rc/manage/settings-and-profiles.mdx
+++ b/docs/3.0rc/manage/settings-and-profiles.mdx
@@ -39,7 +39,7 @@ The `prefect profile` CLI commands enable you to create, review, and manage prof
 | `rename` | Change the name of a profile. |
 | `use` | Switch the active profile. |
 
-### Settings
+### Configure settings
 
 The `prefect config` CLI commands enable you to manage the settings within the currently active profile.
 
