--- a/docs/3.0rc/manage/settings-and-profiles.mdx
+++ b/docs/3.0rc/manage/settings-and-profiles.mdx
@@ -110,7 +110,7 @@ Must be provided in a SQLAlchemy-compatible format. Prefect currently supports S
 
 ## Security settings
 
-### Host the Prefect UI behind a reverse proxy
+### Host the UI behind a reverse proxy
 
 When using a reverse proxy (such as [Nginx](https://nginx.org) or [Traefik](https://traefik.io)) to proxy traffic to a 
 locally-hosted Prefect UI instance, you must also configure the Prefect server instance to connect to the API. 
