--- a/docs/3.0rc/develop/write-flows.mdx
+++ b/docs/3.0rc/develop/write-flows.mdx
@@ -234,7 +234,7 @@ Whether running locally or through a [deployment](/3.0rc/deploy/serve-flows/), y
 
 A nested flow run cannot be cancelled without cancelling its parent flow run.
 If you need to be able to cancel a nested flow run independent of its parent flow run, we recommend deploying it separately and starting it with 
-the [run_deployment](/3.0rc/api-ref/prefect/deployments/deployments/#prefect.deployments.deployments.run_deployment) method.
+the [run_deployment](https://prefect-python-sdk-docs.netlify.app/prefect/deployments/flow_runs/#prefect.deployments.flow_runs.run_deployment) method.
 </Warning>
 
 You can also define flows or tasks in separate modules and import them for use:
