--- a/docs/3.0rc/manage/cloud/manage-users/configure-sso.mdx
+++ b/docs/3.0rc/manage/cloud/manage-users/configure-sso.mdx
@@ -34,8 +34,7 @@ configuration. If your provider isn't listed, try `SAML` or `Open ID Connect` in
 
 ![Opening the Identity Provider Configuration dashboard.](/3.0rc/img/ui/cloud-sso-dashboard.png)
 
-Once you complete SSO configuration, your users must authenticate through your identity provider when accessing account 
-resources, giving you full control over application access.
+Once you complete SSO configuration, your users must authenticate through your identity provider when accessing account resources, giving you full control over application access.
 
 ## Directory sync
 
@@ -50,5 +49,3 @@ Prefect Cloud resources. This allows your IT team to control access to Prefect C
 
 Enterprise plans have access to SCIM for user provisioning.
 The SSO tab provides access to enable SCIM provisioning.
-
-![Cloud UI with SSO & SCIM provisioned](/3.0rc/img/ui/sso-scim-enabled.png)
