--- a/docs/3.0/develop/transactions.mdx
+++ b/docs/3.0/develop/transactions.mdx
@@ -137,7 +137,7 @@ import os
 from time import sleep
 
 from prefect import task, flow
-from prefect.transactions import get_transaction, transaction
+from prefect.transactions import transaction
 
 
 @task
@@ -150,7 +150,7 @@ def write_file(contents: str, filename: str):
 @write_file.on_rollback
 def del_file(txn):
     "Deletes file."
-    os.unlink(txn.get("file_name"))
+    os.unlink(txn.get("filename"))
 
 
 @task
@@ -164,9 +164,8 @@ def quality_test(filename):
 
 
 @flow
-def pipeline(contents: str):
+def pipeline(filename: str, contents: str):
     with transaction() as txn:
-        filename = "side-effect.txt"
         txn.set("file_name", filename)
         write_file(contents, filename)
         sleep(2)  # sleeping to give you a chance to see the file
@@ -174,7 +173,10 @@ def pipeline(contents: str):
 
 
 if __name__ == "__main__":
-    pipeline(contents="hello world")
+    pipeline(
+        filename="side-effect.txt",
+        contents="hello world",
+    )
 ```
 
 The value of `contents` is accessible within the `on_rollback` hook. 
