--- a/docs/3.0/api-ref/rest-api/index.mdx
+++ b/docs/3.0/api-ref/rest-api/index.mdx
@@ -60,7 +60,7 @@ lemur-facts 53f710e7-3b0f-4b2f-ab6b-44934111818c
 
 This example uses the Requests library with Prefect Cloud to return the five newest artifacts.
 
-<!-- pmd-metadata: fixture123 -->
+{/* pmd-metadata: notest */}
 ```python
 import requests
 
